# knowledge-platform

./: .gitignore  Makefile  README.md  docker-compose.vector.yml
backend/: .env.example  README.md  pyproject.toml
backend/evals/: aliyun_product_questions.jsonl
backend/src/knowledge_platform/: __init__.py  main.py
backend/src/knowledge_platform/config/: settings.py
backend/src/knowledge_platform/crawlers/: __init__.py  aliyun_docs.py  base.py
backend/src/knowledge_platform/datasources/: __init__.py  base.py  memory.py
backend/src/knowledge_platform/documents/: __init__.py  chunker.py  models.py
backend/src/knowledge_platform/embeddings/: __init__.py  base.py  dashscope.py
backend/src/knowledge_platform/llm/: __init__.py  answer.py  intent.py
backend/src/knowledge_platform/providers/: __init__.py  aliyun_customer_service.py  base.py
backend/src/knowledge_platform/scripts/: __init__.py  chunk_aliyun_docs.py  clean_aliyun_docs.py  crawl_aliyun_docs.py  evaluate_rag.py  index_aliyun_docs.py  search_aliyun_docs.py
backend/src/knowledge_platform/services/: chat_service.py  customer_service.py  factory.py  ingestion_service.py  retrieval_service.py
backend/src/knowledge_platform/sessions/: __init__.py  models.py  store.py
backend/src/knowledge_platform/vectorstores/: __init__.py  base.py  memory.py  qdrant.py
backend/tests/: test_aliyun_docs_cleaner.py  test_aliyun_docs_crawler.py  test_app.py  test_chat_service.py  test_evaluate_rag.py  test_index_aliyun_docs.py  test_markdown_chunker.py  test_retrieval_service.py
docs/: rag-architecture.md
(+41103 files in other folders)
